fixed an issue with card width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -484,6 +484,7 @@ select {
 }
 
 .card {
+  width: min(100%, 40rem);
   border: 3px solid hsl(var(--clr-light));
   flex-direction: column;
   border-radius: 1rem;
